src/components/Players/players.css
#player-section {
  background-color: var(--green2);
}

#table-container {
  width: 100vw;
  display: flex;
  justify-content: center;
}

table {
  background-color: var(--green1);
  margin: 1em 0 1em 0;
  border: 8px ridge var(--cream);
  width: 40vw;
  height: auto;
  color: var(--white);
  font-size: 1.1em;
}
@media only screen and (max-width: 800px) {
  table {
    width: 90vw;
    /* margin-left: 4.5%; */
  }
}
@media only screen and (max-width: 1400px) {
  table {
    width: 50vw;
    /* margin-left: 4.5%; */
  }
}

thead tr td {
  border-bottom: 1px solid var(--cream);
}

td {
  text-align: center;
}

#input-header {
  margin: 0.5em 0 0.5em 0;
}

#player-input-box {
  margin: 1em 0.5em 0 0;
}

#player-button {
  height: 2em;
  min-width: 4em;
  margin: 0.3em;
  border-radius: 0.4em;
  border-color: var(--white);
  /* background-color: rgb(255, 153, 0);   */
  background-color: var(--blue2);
  color: var(--white);
}

.player-submit {
  height: 2em;
  margin: 0.3em;
  border-radius: 0.4em;
  background-color: var(--green1);
  border-color: var(--white);
  color: var(--white);
}

.winner-button {
  height: 2em;
  margin: 0.3em;
  border-radius: 0.4em;
  background-color: gold;
}
.final-score-button {
  height: 2em;
  margin: 0.3em;
  border-radius: 0.4em;
  background-color: gold;
}

#winner-text {
  color: var(--white);
}

#turn-text {
  color: var(--white);
  margin: 0.5em 0;
  /* width: 80vw; */
  /* justify-self: center; */
}

